# CI2024_lab3

./: README.md  gem_puzzle.ipynb  pyproject.toml
